[project]
name = "zmap-mcp"
version = "0.1.0"
description = "FastMCP wrapper for ZMap network scanner providing a structured API for network scanning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "ipaddress>=1.0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
